--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "engines": {
     "npm": "7.4.0",
-    "node":"15.6.0"
+    "node":"22.x"
   },
   "scripts": {
     "start": "node index.js",
@@ -33,4 +33,5 @@
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
   }
+  
 }
